--- a/_includes/head.html
+++ b/_includes/head.html
@@ -29,7 +29,7 @@
     <meta property="og:site_name" content="{{ site.title | xml_escape }}">
 
     <!-- Icons -->
-    <link href='/favicon.ico' rel='icon' type='image/x-icon'/>
+    <link href="//misterkatiyar.in/favicon.ico" rel="icon" type="image/x-icon"/>
 <!--
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png">
