--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
     <div class="measure mt1 center">
       <small>
         &copy; 2015 <a href="//misterkatiyar.in/">MisterKatiyar.in</a>
-         | Powered&nbsp;by&nbsp;<a href="https://plus.google.com/+MisterKatiyarBhalendraProfile">Bhalendra&nbsp;Katiyar</a>
+         Powered&nbsp;by&nbsp;<a href="https://plus.google.com/+MisterKatiyarBhalendraProfile">Bhalendra&nbsp;Katiyar</a>
       </small>
     </div>
   </div>
