--- a/_includes/post_footer.html
+++ b/_includes/post_footer.html
@@ -1,5 +1,5 @@
 <div class="py2 post-footer">
-  <img src="/images/me.jpeg" alt="Bhalendra Katiyar" class="avatar" />
+  <img src="{{site.url}}/images/me.jpeg" alt="Bhalendra Katiyar" class="avatar" />
   <p>
     Hi, Thanks for being here. I am the writer of this blog. 
     I belongs to computer science and 
