--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,7 +17,7 @@ layout: default
 </div>
 
 <article class="post-content">
-  {{ page.summary }} <hr>
+  {% if page.summary %} {{ page.summary }} <hr> {% endif %}
   {{ content }}
 </article>
 
